--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.0.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.6.0",
-		"morgan": "^1.9.1"
+		"mongoose": "^5.6.8",
+		"morgan": "^1.9.1",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
-		"eslint": "^5.16.0"
+		"eslint": "^6.1.0"
 	}
 }
