--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-	"name": "image-api",
+	"name": "ez-api",
 	"version": "1.0.0",
 	"description": "",
 	"main": "main.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node main.js",
+		"test": "nodemon main.js"
 	},
 	"author": "Eriknaitor",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
-		"dotenv": "^8.0.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.6.8",
-		"morgan": "^1.9.1",
-		"multer": "^1.4.2"
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.9.12",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.2",
+		"otplib": "^12.0.1",
+		"qrcode": "^1.4.4"
 	},
 	"devDependencies": {
-		"eslint": "^6.1.0"
+		"eslint": "^6.8.0",
+		"eslit": "^6.0.0"
 	}
 }
