--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.9.12",
+		"mongoose": "^5.9.27",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
+		"node-fetch": "^2.6.0",
 		"otplib": "^12.0.1",
 		"qrcode": "^1.4.4"
 	},
